[gd_scene load_steps=6 format=3 uid="uid://civy0ur1ttmlm"]

[ext_resource type="Script" path="res://gameplay/combat/stupid/poolbullet.gd" id="1_34w0g"]
[ext_resource type="PackedScene" uid="uid://bl5dvsn5pdw0p" path="res://effects/hitFX.tscn" id="2_fqvxt"]
[ext_resource type="PackedScene" uid="uid://w47g07iayk1o" path="res://gameplay/damage/damage_area.tscn" id="3_q3w7s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hfkbo"]
shading_mode = 0
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_y1m0o"]
material = SubResource("StandardMaterial3D_hfkbo")
radius = 0.3
height = 6.0
rings = 8

[node name="Poolbullet" type="Node3D"]
script = ExtResource("1_34w0g")

[node name="hitFX" parent="." instance=ExtResource("2_fqvxt")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -0.516486, 0, 1, -2.25763e-08, 0.000318944, 0.00197834, 0.628824)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -0.516486, 0, 1, -2.25763e-08, 0, 0, 0)
mesh = SubResource("SphereMesh_y1m0o")
skeleton = NodePath("")

[node name="DamageArea" parent="." instance=ExtResource("3_q3w7s")]
monitoring = false
monitorable = false

[connection signal="finished" from="hitFX" to="." method="_on_hit_fx_finished"]
[connection signal="on_hit" from="DamageArea" to="." method="_on_damage_area_on_hit"]

[editable path="hitFX"]
